Fix scrollbar hinders the text

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ body {
     margin: 49px 18px 30px 18px;
     display: flex;
     overflow-x: scroll;
+    padding-bottom: 20px;
 }
 
 .card {
